--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<meta content="telephone=no" name="format-detection">
 	<meta content="email=no" name="format-detection">
 	<script>
-		(function() {
-			var html = document.documentElement;
-			var hWidth = html.getBoundingClientRect().width;
-			html.style.fontSize = hWidth / 15 + "px";
-		})()
+		// (function() {
+		// 	var html = document.documentElement;
+		// 	var hWidth = html.getBoundingClientRect().width;
+		// 	html.style.fontSize = hWidth / 15 + "px";
+		// })()
 	</script>
 	<style>
 		* {
@@ -24,11 +24,6 @@
 </head>
 <body>
 	<div class="wrap" id="app"></div>
-		
-	
-	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	
 </body>
 
 </html>
